[package]
name = "konveyor-core"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Shared types, gRPC protocol, and provider SDK for the Konveyor migration ecosystem"

[features]
default = []
grpc = [
    "dep:tonic",
    "dep:prost",
    "dep:prost-types",
    "dep:tonic-reflection",
    "dep:tokio",
    "dep:tokio-stream",
    "dep:async-stream",
]
generate-proto = ["dep:tonic-build", "dep:dlprotoc"]

[dependencies]
# Serialization (always)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# gRPC (optional, behind `grpc` feature)
tonic = { version = "0.13", optional = true }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }
tonic-reflection = { version = "0.13", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1", optional = true }
async-stream = { version = "0.3", optional = true }

# Logging
tracing = "0.1"

[build-dependencies]
tonic-build = { version = "0.13", optional = true }
dlprotoc = { version = "0.4", optional = true }
